--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: "Build and run tests"
           command: |
-            ./gradlew --no-daemon -PtagVersion=${CIRCLE_TAG} build test shadowJar
+            ./gradlew --no-daemon -PtagVersion=${CIRCLE_TAG} build test check shadowJar
       - store_test_results:
           path: build/test-results/test
       - run:
